change update url